[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fugw"
authors = [
  {name = "Alexis Thual", email = "alexisthual@gmail.com"},
  {name = "Huy Tran",  email = "quang-huy.tran@univ-ubs.fr"},
]
description = "A collection of gpu-compatible solvers for fused unbalanced gromov-wasserstein optimization problems"
readme = "README.md"
keywords = ["optimal transport", "gromov wasserstein", "solver"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.20",
  "torch>=1.13",
  "rich>=13.3.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "fugw[doc]",
  "fugw[scripts]",
  "fugw[test]",
  "pre-commit",
]
doc = [
  "furo",
  "m2r2",
  "matplotlib",
  "myst_parser",
  "numpydoc",
  "pillow",
  "sphinx",
  "sphinx-gallery",
]
test = [
  "fugw[scripts]",
  "flake8",
  "meshzoo>=0.9.20",
  "pytest>=7.2",
]
scripts = [
  "joblib>=1.2.0",
  "tvb-gdist>=2.1.1",
]

[project.urls]
homepage = "https://github.com/alexisthual/fugw"
repository = "https://github.com/alexisthual/fugw.git"

[tool.black]
line-length = 79
preview = true

[tool.setuptools.dynamic]
version = {attr = "fugw.__version__"}
