[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fugw"
authors = [
  {name = "Alexis Thual", email = "alexisthual@gmail.com"},
  {name = "Huy Tran",  email = "quang-huy.tran@univ-ubs.fr"},
]
description = "A collection of gpu-compatible solvers for fused unbalanced gromov-wasserstein optimization problems"
readme = "README.md"
keywords = ["optimal transport", "gromov wasserstein", "solver"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "dijkstra3d>=1.12.1",
  "joblib>=1.2.0",
  "numpy>=1.20",
  "rich>=13.3.1",
  "POT>=0.9.0",
  "scikit-learn",
  "scipy",
  "torch>=1.13",
  "tvb-gdist>=2.1.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "fugw[doc]",
  "fugw[test]",
  "pre-commit",
]
doc = [
  "furo>=2022.12.07",
  "fugw[test]",
  "kaleido",
  "m2r2",
  "matplotlib",
  "memory_profiler",
  "myst_parser",
  "numpydoc",
  "pillow",
  "plotly",
  "sphinx==5.3.0",
  "sphinx-copybutton",
  "sphinx-gallery>=0.11.1",
]
test = [
  "flake8",
  "nilearn",
  "pyproject-flake8",
  "pytest>=7.2",
]

[project.urls]
homepage = "https://github.com/alexisthual/fugw"
repository = "https://github.com/alexisthual/fugw.git"

[tool.black]
line-length = 79
preview = true

[tool.flake8]
ignore = ["E203", "W503"]

[tool.setuptools.dynamic]
version = {attr = "fugw.__version__"}
